# mingw-dist

./: .cvsignore  .gitignore  .hgignore  ChangeLog  Makefile.comm.in  Makefile.in  Makefile.stub.in  Makefile.sync.in  VERSION.m4  configure.ac  issue.log.in  makeopts.m4
common/: package-list.xml
contrib/: mingw32-contrib-package-list.xml  mingw32-libunistring.xml  mingw32-ncurses.xml  mingw32-pdcurses.xml  mingw32-tcltk.xml  mingw32-xerces-c.xml
mingw32/: autoconf.xml  automake.xml  libtool.xml  mingw32-autoconf.xml  mingw32-automake.xml  mingw32-autotools.xml  mingw32-base.xml  mingw32-basic-bsdtar.xml  mingw32-binutils.xml  mingw32-bzip2.xml  mingw32-cygutils.xml  mingw32-dos2unix.xml  mingw32-expat.xml  mingw32-gcc-tools.xml  mingw32-gcc3.xml  mingw32-gcc4.xml  mingw32-gdb.xml  mingw32-gendef.xml  mingw32-gettext.xml  mingw32-gmp.xml  mingw32-isl.xml  mingw32-libarchive.xml  mingw32-libiconv.xml  mingw32-libtool.xml  mingw32-lua.xml  mingw32-make.xml  mingw32-mgwport.xml  mingw32-mingw-get.xml  mingw32-mingw-utils.xml  mingw32-mpc.xml  mingw32-mpfr.xml  mingw32-package-list.xml  mingw32-pdcurses.xml  mingw32-pexports.xml  mingw32-popt.xml  mingw32-pthreads-w32.xml  mingw32-runtime.xml  mingw32-wsl-candidate.xml  mingw32-xz.xml  mingw32-zlib.xml
msys/: mingw-developer-toolkit.xml  msys-autoconf.xml  msys-autogen.xml  msys-automake.xml  msys-base.xml  msys-bash.xml  msys-binutils.xml  msys-bison.xml  msys-bzip2.xml  msys-console.xml  msys-core.xml  msys-coreutils.xml  msys-crypt.xml  msys-cvs.xml  msys-cygutils.xml  msys-dash.xml  msys-diffstat.xml  msys-diffutils.xml  msys-dos2unix.xml  msys-expat.xml  msys-file.xml  msys-findutils.xml  msys-flex.xml  msys-gawk.xml  msys-gcc.xml  msys-gdbm.xml  msys-gettext.xml  msys-gmp.xml  msys-grep.xml  msys-groff.xml  msys-guile.xml  msys-gzip.xml  msys-help2man.xml  msys-inetutils.xml  msys-less.xml  msys-libarchive.xml  msys-libiconv.xml  msys-libtool.xml  msys-libxml2.xml  msys-lndir.xml  (+32 more)
tests/: Makefile.in  configure.ac  pkgspec.xsd  xmlcheck.cpp
